--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap");
+
 html,
 body,
 div,
@@ -102,6 +104,7 @@ section {
 }
 body {
   line-height: 1;
+  font-family: "Roboto", sans-serif;
 }
 ol,
 ul {
